@@ -4,6 +4,8 @@ Changes for Perl extension OpenGL-RWX
 	- Adding support for the vertexect alias
 	- Adding support for drawing polygons
 	- Adding support for drawing quads
+	- Adding basic colour support
+	- Added the calculation of surface normals
 
 0.01 Sat 18 Dec 2010
 	- Creating initial implementation
